# infos_product

./: informacoes produto.bat  main.py  pyproject.toml  requirements.txt  table.py  teste.py
base/: process.py
data/sql/: query.sql
services/: query.py
