[project]
name = "infos-product"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ecomm_postgres",
    "rich>=14.3.2",
]

[tool.uv.sources]
ecomm_postgres = { git = "https://github.com/E-commerce-Pecista/ecomm-postgres" }
